个人主页修改

--- a/home.html
+++ b/home.html
@@ -5,6 +5,7 @@
 -->
 <!DOCTYPE html>
 <html lang="zh-CN">
+
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -95,12 +96,13 @@
 	        	时间：2015-11-26
 	        	描述：导航结束
 	        -->
-			<div id="left-menu" >
+			<div id="left-menu">
 				<div class="left-title">我的资源公众号</div>
 				<ul>
 					<li> 云板书</li>
 					<li> 我建的课堂</li>
-					<li> 我建的MOOOMC课程</li>
+					<li> 我管理的课程</li>
+					<li> 我建的课程</li>
 					<!--<li> 视频</li>
 					<li> 医学词条</li>
 					<li> 虚拟器官</li>
@@ -110,7 +112,8 @@
 
 				</ul>
 
-	
+				<!--
+      
 				<div class="left-title">我的公众形象</div>
 
 				<ul>
@@ -157,80 +160,172 @@
 					<li> ？？？的健康信息</li>
 					<li> ？？？的健康信息</li>
 				</ul>
+				 -->
 			</div>
 			<div class="container " id="course-list-div">
 				<!--
                 	作者：fmj074@163.com
-                	时间：2015-11-26
-                	描述：网络课程开始
+                	时间：2015-12-22
+                	描述：我的云板书
                 -->
-				<div class="row">
+				<div class="row content">
 
 					<div class="col-md-3 col-sm-6">
-						<div class="thumbnails thumbnail-style thumbnail-kenburn">
-							<div class="thumbnail-img">
-								<div class="overflow-hidden">
-									<img class="img-responsive" src="img/img12.jpg" alt="">
-								</div>
-								<a class="btn-more hover-effect" href="classroom.html">学习 +</a>
-							</div>
-							<div class="caption">
-								<h3><a class="hover-effect" href="#">课程2</a></h3>
-								<p>课程简介:本课程是网络公开课</p>
-							</div>
+						<img class="img-responsive" src="img/img12.jpg" alt="">
+						<div class="summary">
+							<div class="title2">均值 中位数 众数课件</div>
+							<a href="res_detail.html">这门课是统计学入门课程，将涵盖统计学所有的主要知识，包括：随机变量.....</a>
 						</div>
 					</div>
 					<div class="col-md-3 col-sm-6">
-						<div class="thumbnails thumbnail-style thumbnail-kenburn">
-							<div class="thumbnail-img">
-								<div class="overflow-hidden">
-									<img class="img-responsive" src="img/img12.jpg" alt="">
-								</div>
-								<a class="btn-more hover-effect" href="classroom.html">学习 +</a>
-							</div>
-							<div class="caption">
-								<h3><a class="hover-effect" href="#">课程2</a></h3>
-								<p>课程简介:本课程是网络公开课</p>
-							</div>
+						<img class="img-responsive" src="img/img12.jpg" alt="">
+						<div class="summary">
+							<div class="title2">均值 中位数 众数课件</div>
+							<a href="res_detail.html">这门课是统计学入门课程，将涵盖统计学所有的主要知识，包括：随机变量.....</a>
 						</div>
 					</div>
 					<div class="col-md-3 col-sm-6">
-						<div class="thumbnails thumbnail-style thumbnail-kenburn">
-							<div class="thumbnail-img">
-								<div class="overflow-hidden">
-									<img class="img-responsive" src="img/img12.jpg" alt="">
-								</div>
-								<a class="btn-more hover-effect" href="classroom.html">学习 +</a>
-							</div>
-							<div class="caption">
-								<h3><a class="hover-effect" href="#">课程2</a></h3>
-								<p>课程简介:本课程是网络公开课</p>
-							</div>
+						<img class="img-responsive" src="img/img12.jpg" alt="">
+						<div class="summary">
+							<div class="title2">均值 中位数 众数课件</div>
+							<a href="res_detail.html">这门课是统计学入门课程，将涵盖统计学所有的主要知识，包括：随机变量.....</a>
 						</div>
 					</div>
 					<div class="col-md-3 col-sm-6">
-						<div class="thumbnails thumbnail-style thumbnail-kenburn">
-							<div class="thumbnail-img">
-								<div class="overflow-hidden">
-									<img class="img-responsive" src="img/img12.jpg" alt="">
-								</div>
-								<a class="btn-more hover-effect" href="classroom.html">学习 +</a>
-							</div>
-							<div class="caption">
-								<h3><a class="hover-effect" href="#">课程2</a></h3>
-								<p>课程简介:本课程是网络公开课</p>
-							</div>
+						<img class="img-responsive" src="img/img12.jpg" alt="">
+						<div class="summary">
+							<div class="title">云板书4</div>
+							<div class="teacher"></div>
+							<a href="res_detail.html">这门课是统计学入门课程，将涵盖统计学所有的主要知识，包括：随机变量.....</a>
+						</div>
+					</div>
+
+				</div>
+				<!--
+                	作者：fmj074@163.com
+                	时间：2015-11-26
+                	描述：我建的课程
+                -->
+				<div class="row content" style="display: none;">
+
+					<div class="col-md-3 col-sm-6">
+						<img class="img-responsive" src="img/img12.jpg" alt="">
+						<div class="summary">
+							<div class="title">统计学</div>
+							<div class="teacher">主讲老师:<a href="#">何华教授</a></div>
+							<a href="add_course.html">这门课是统计学入门课程，将涵盖统计学所有的主要知识，包括：随机变量.....</a>
+						</div>
+					</div>
+					<div class="col-md-3 col-sm-6">
+						<img class="img-responsive" src="img/img12.jpg" alt="">
+						<div class="summary">
+							<div class="title">统计学</div>
+							<div class="teacher">主讲老师:<a href="#">何华教授</a></div>
+							<a href="add_course.html">这门课是统计学入门课程，将涵盖统计学所有的主要知识，包括：随机变量.....</a>
+						</div>
+					</div>
+					<div class="col-md-3 col-sm-6">
+						<img class="img-responsive" src="img/img12.jpg" alt="">
+						<div class="summary">
+							<div class="title">统计学</div>
+							<div class="teacher">主讲老师:<a href="#">何华教授</a></div>
+							<a href="add_course.html">这门课是统计学入门课程，将涵盖统计学所有的主要知识，包括：随机变量.....</a>
+						</div>
+					</div>
+					<div class="col-md-3 col-sm-6">
+						<img class="img-responsive" src="img/img12.jpg" alt="">
+						<div class="summary">
+							<div class="title">统计学</div>
+							<div class="teacher">主讲老师:<a href="#">何华教授</a></div>
+							<a href="add_course.html">这门课是统计学入门课程，将涵盖统计学所有的主要知识，包括：随机变量.....</a>
 						</div>
 					</div>
 
 				</div>
 
-				<!-- End Recent Works -->
 				<!--
                 	作者：fmj074@163.com
-                	时间：2015-11-26
-                	描述：网络课程结束
+                	时间：2015-12-22
+                	描述：我管理的课程
                 -->
+				<div class="row content"  style="display: none;">
+
+					<div class="col-md-3 col-sm-6">
+						<img class="img-responsive" src="img/img12.jpg" alt="">
+						<div class="summary">
+							<div class="title">课程1</div>
+							<div class="teacher">主讲老师:<a href="#">何华教授</a></div>
+							<a href="classroom.html">这门课是统计学入门课程，将涵盖统计学所有的主要知识，包括：随机变量.....</a>
+						</div>
+					</div>
+					<div class="col-md-3 col-sm-6">
+						<img class="img-responsive" src="img/img12.jpg" alt="">
+						<div class="summary">
+							<div class="title">tong</div>
+							<div class="teacher">主讲老师:<a href="#">何华教授</a></div>
+							<a href="classroom.html">这门课是统计学入门课程，将涵盖统计学所有的主要知识，包括：随机变量.....</a>
+						</div>
+					</div>
+					<div class="col-md-3 col-sm-6">
+						<img class="img-responsive" src="img/img12.jpg" alt="">
+						<div class="summary">
+							<div class="title">统计学</div>
+							<div class="teacher">主讲老师:<a href="#">何华教授</a></div>
+							<a href="classroom.html">这门课是统计学入门课程，将涵盖统计学所有的主要知识，包括：随机变量.....</a>
+						</div>
+					</div>
+					<div class="col-md-3 col-sm-6">
+						<img class="img-responsive" src="img/img12.jpg" alt="">
+						<div class="summary">
+							<div class="title">统计学</div>
+							<div class="teacher">主讲老师:<a href="#">何华教授</a></div>
+							<a href="classroom.html">这门课是统计学入门课程，将涵盖统计学所有的主要知识，包括：随机变量.....</a>
+						</div>
+					</div>
+
+				</div>
+
+				<!--
+                	作者：fmj074@163.com
+                	时间：2015-12-22
+                	描述：我管理的课堂
+                -->
+				<div class="row content"  style="display: none;">
+
+					<div class="col-md-3 col-sm-6">
+						<img class="img-responsive" src="img/img12.jpg" alt="">
+						<div class="summary">
+							<div class="title">课程1</div>
+							<div class="teacher">主讲老师:<a href="#">何华教授</a></div>
+							<a href="classroom.html">这门课是统计学入门课程，将涵盖统计学所有的主要知识，包括：随机变量.....</a>
+						</div>
+					</div>
+					<div class="col-md-3 col-sm-6">
+						<img class="img-responsive" src="img/img12.jpg" alt="">
+						<div class="summary">
+							<div class="title">tong</div>
+							<div class="teacher">主讲老师:<a href="#">何华教授</a></div>
+							<a href="classroom.html">这门课是统计学入门课程，将涵盖统计学所有的主要知识，包括：随机变量.....</a>
+						</div>
+					</div>
+					<div class="col-md-3 col-sm-6">
+						<img class="img-responsive" src="img/img12.jpg" alt="">
+						<div class="summary">
+							<div class="title">统计学</div>
+							<div class="teacher">主讲老师:<a href="#">何华教授</a></div>
+							<a href="classroom.html">这门课是统计学入门课程，将涵盖统计学所有的主要知识，包括：随机变量.....</a>
+						</div>
+					</div>
+					<div class="col-md-3 col-sm-6">
+						<img class="img-responsive" src="img/img12.jpg" alt="">
+						<div class="summary">
+							<div class="title">统计学</div>
+							<div class="teacher">主讲老师:<a href="#">何华教授</a></div>
+							<a href="classroom.html">这门课是统计学入门课程，将涵盖统计学所有的主要知识，包括：随机变量.....</a>
+						</div>
+					</div>
+
+				</div>
 
 			</div>
 
@@ -365,6 +460,14 @@
 						location.href = "add_course.html"
 					});
 					$('#show-left-menu').click();
+					/**
+					 * 左侧选择菜单
+					 */
+					$('#left-menu li').click(function(){
+						$('.content').hide();
+						$('.content:eq('+$('#left-menu li').index($(this))+')').fadeIn();
+					});
+					
 				})
 			</script>
 	</body>
