课程管理页面

--- a/home.html
+++ b/home.html
@@ -255,7 +255,7 @@
 						<div class="summary">
 							<div class="title">课程1</div>
 							<div class="teacher">主讲老师:<a href="#">何华教授</a></div>
-							<a href="classroom.html">这门课是统计学入门课程，将涵盖统计学所有的主要知识，包括：随机变量.....</a>
+							<a href="course_manager.html">这门课是统计学入门课程，将涵盖统计学所有的主要知识，包括：随机变量.....</a>
 						</div>
 					</div>
 					<div class="col-md-3 col-sm-6">
@@ -263,7 +263,7 @@
 						<div class="summary">
 							<div class="title">tong</div>
 							<div class="teacher">主讲老师:<a href="#">何华教授</a></div>
-							<a href="classroom.html">这门课是统计学入门课程，将涵盖统计学所有的主要知识，包括：随机变量.....</a>
+							<a href="course_manager.html">这门课是统计学入门课程，将涵盖统计学所有的主要知识，包括：随机变量.....</a>
 						</div>
 					</div>
 					<div class="col-md-3 col-sm-6">
@@ -271,7 +271,7 @@
 						<div class="summary">
 							<div class="title">统计学</div>
 							<div class="teacher">主讲老师:<a href="#">何华教授</a></div>
-							<a href="classroom.html">这门课是统计学入门课程，将涵盖统计学所有的主要知识，包括：随机变量.....</a>
+							<a href="course_manager.html">这门课是统计学入门课程，将涵盖统计学所有的主要知识，包括：随机变量.....</a>
 						</div>
 					</div>
 					<div class="col-md-3 col-sm-6">
@@ -279,7 +279,7 @@
 						<div class="summary">
 							<div class="title">统计学</div>
 							<div class="teacher">主讲老师:<a href="#">何华教授</a></div>
-							<a href="classroom.html">这门课是统计学入门课程，将涵盖统计学所有的主要知识，包括：随机变量.....</a>
+							<a href="course_manager.html">这门课是统计学入门课程，将涵盖统计学所有的主要知识，包括：随机变量.....</a>
 						</div>
 					</div>
 
