--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                 -->
 				<!-- Recent Works -->
 				<div class="headline">
-					<h4>网络课程</h4>
+					<div class="col-sm-10"><h4>网络课程</h4></div><div class="col-sm-2" style="text-align: right;margin-top: 10px;;"><a href="more_course.html">更多>>></a></div>
 				</div>
 				<div class="row margin-bottom-20">
 					<div class="col-md-3 col-sm-6">
@@ -149,7 +149,7 @@
 								<div class="overflow-hidden">
 									<img class="img-responsive" src="img/img12.jpg" alt="">
 								</div>
-								<a class="btn-more hover-effect" href="course.html">学习 +</a>
+								<a class="btn-more hover-effect" href="classroom.html">学习 +</a>
 							</div>
 							<div class="caption">
 								<h3><a class="hover-effect" href="#">课程2</a></h3>
@@ -163,7 +163,7 @@
 								<div class="overflow-hidden">
 									<img class="img-responsive" src="img/img12.jpg" alt="">
 								</div>
-								<a class="btn-more hover-effect" href="course.html">学习 +</a>
+								<a class="btn-more hover-effect" href="classroom.html">学习 +</a>
 							</div>
 							<div class="caption">
 								<h3><a class="hover-effect" href="#">课程2</a></h3>
@@ -177,7 +177,7 @@
 								<div class="overflow-hidden">
 									<img class="img-responsive" src="img/img12.jpg" alt="">
 								</div>
-								<a class="btn-more hover-effect" href="course.html">学习 +</a>
+								<a class="btn-more hover-effect" href="classroom.html">学习 +</a>
 							</div>
 							<div class="caption">
 								<h3><a class="hover-effect" href="#">课程2</a></h3>
@@ -191,7 +191,7 @@
 								<div class="overflow-hidden">
 									<img class="img-responsive" src="img/img12.jpg" alt="">
 								</div>
-								<a class="btn-more hover-effect" href="study.html">学习 +</a>
+								<a class="btn-more hover-effect" href="classroom.html">学习 +</a>
 							</div>
 							<div class="caption">
 								<h3><a class="hover-effect" href="#">课程2</a></h3>
@@ -210,8 +210,8 @@
     -->
                 <!-- Recent Works -->
                 <div class="headline">
-                    <h4>机构号</h4>
-                </div>
+					<div class="col-sm-10"><h4>机构</h4></div><div class="col-sm-2" style="text-align: right;margin-top: 10px;;"><a href="more_jg.html">更多>>></a></div>
+				</div>
                 <div class="row margin-bottom-20">
                     <div class="col-md-3 col-sm-6">
                         <div class="thumbnails thumbnail-style thumbnail-kenburn">
@@ -219,7 +219,7 @@
                                 <div class="overflow-hidden">
                                     <img class="img-responsive" src="img/img12.jpg" alt="">
                                 </div>
-                                <a class="btn-more hover-effect" href="course.html">详细 +</a>
+                                <a class="btn-more hover-effect" href="jg_detail.html">详细 +</a>
                             </div>
                             <div class="caption">
                                 <h3><a class="hover-effect" href="#">机构1</a></h3>
@@ -233,7 +233,7 @@
                                 <div class="overflow-hidden">
                                     <img class="img-responsive" src="img/img12.jpg" alt="">
                                 </div>
-                                <a class="btn-more hover-effect" href="course.html">详细 +</a>
+                                <a class="btn-more hover-effect" href="jg_detail.html">详细 +</a>
                             </div>
                             <div class="caption">
                                 <h3><a class="hover-effect" href="#">机构2</a></h3>
@@ -247,7 +247,7 @@
                                 <div class="overflow-hidden">
                                     <img class="img-responsive" src="img/img12.jpg" alt="">
                                 </div>
-                                <a class="btn-more hover-effect" href="course.html">详细 +</a>
+                                <a class="btn-more hover-effect" href="jg_detail.html">详细 +</a>
                             </div>
                             <div class="caption">
                                 <h3><a class="hover-effect" href="#">机构3</a></h3>
@@ -261,7 +261,7 @@
                                 <div class="overflow-hidden">
                                     <img class="img-responsive" src="img/img12.jpg" alt="">
                                 </div>
-                                <a class="btn-more hover-effect" href="study.html">详细 +</a>
+                                <a class="btn-more hover-effect" href="jg_detail.html">详细 +</a>
                             </div>
                             <div class="caption">
                                 <h3><a class="hover-effect" href="#">机构4</a></h3>
