--- a/jg_detail.html
+++ b/jg_detail.html
@@ -17,9 +17,11 @@
 		<link href="css/bootstrap.min.css" rel="stylesheet">
 		<link href="css/common.css" rel="stylesheet">
 		<style>
-			p{text-indent: 20px;}
+			p {
+				text-indent: 20px;
+			}
 		</style>
-	
+
 		<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 		<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
 		<!--[if lt IE 9]>
@@ -93,37 +95,85 @@
 				</div>
 				<!-- /.navbar-collapse -->
 			</div>
-			<!--
+		</nav>
+		<!--
         	作者：fmj074@163.com
         	时间：2015-11-26
         	描述：导航结束
         -->
 
-			<div class="container">
-				<div class="col-sm-8">
-					<b>概要</b>
-					<p>浙江大学（Zhejiang University），简称“浙大”，坐落于“人间天堂”杭州。前身是1897年创建的求是书院，是中国人自己最早创办的现代高等学府之一。1928年更名为国立浙江大学。中华民国时期，浙江大学在竺可桢老校长的带领下，崛起为民国最高学府之一，被英国学者李约瑟誉为“东方剑桥”，迎来了浙大百年历史上最辉煌的时期。竺可桢老校长也因其历史贡献，成为了浙大校史上最伟大的人，并确立“求是”校训和《浙江大学校歌》。</p>
-					<p>浙江大学直属于中华人民共和国教育部，是中国首批7所“211工程”、首批9所“985工程”重点建设的全国重点大学之一，是C9联盟、世界大学联盟、环太平洋大学联盟的成员，是教育部“卓越医生教育培养计划”、“卓越农林人才教育培养计划”改革试点高校，是中国著名顶尖学府之一。 </p>
-					<p>截至2015年9月，浙江大学共拥有紫金港、玉泉、西溪、华家池、之江、舟山6个校区，占地总面积4.50平方公里，校舍总建筑面积2072303平方米，图书馆藏书671万余册，并有7家附属医院；国家重点一级学科14个，国家重点二级学科21个；一级学科博士学位授权点58个，二级学科博士学位授权点298个，博士后科研流动站52个；本科专业123个，全日制在校学生46364人，其中硕士研究生13952人，博士研究生8779人，本科生23633人。</p>
-
-				</div>
-				<div class="col-sm-4">
-					<img src="img/clients4/10.png" />
-				</div>
-			</div>
+		<div class="container">
+			<div class="col-sm-8">
+				<b>概要</b>
+				<p>浙江大学（Zhejiang University），简称“浙大”，坐落于“人间天堂”杭州。前身是1897年创建的求是书院，是中国人自己最早创办的现代高等学府之一。1928年更名为国立浙江大学。中华民国时期，浙江大学在竺可桢老校长的带领下，崛起为民国最高学府之一，被英国学者李约瑟誉为“东方剑桥”，迎来了浙大百年历史上最辉煌的时期。竺可桢老校长也因其历史贡献，成为了浙大校史上最伟大的人，并确立“求是”校训和《浙江大学校歌》。</p>
+				<p>浙江大学直属于中华人民共和国教育部，是中国首批7所“211工程”、首批9所“985工程”重点建设的全国重点大学之一，是C9联盟、世界大学联盟、环太平洋大学联盟的成员，是教育部“卓越医生教育培养计划”、“卓越农林人才教育培养计划”改革试点高校，是中国著名顶尖学府之一。 </p>
+				<p>截至2015年9月，浙江大学共拥有紫金港、玉泉、西溪、华家池、之江、舟山6个校区，占地总面积4.50平方公里，校舍总建筑面积2072303平方米，图书馆藏书671万余册，并有7家附属医院；国家重点一级学科14个，国家重点二级学科21个；一级学科博士学位授权点58个，二级学科博士学位授权点298个，博士后科研流动站52个；本科专业123个，全日制在校学生46364人，其中硕士研究生13952人，博士研究生8779人，本科生23633人。</p>
 
 			</div>
+			<div class="col-sm-4">
+				<img src="img/clients4/zjdx.jpg" style="width: 60%;margin-left: 20%;" />
+			</div>
+			<div class="row">
+				<table class="table table-striped table-bordered">
+					<tr>
+						<td>姓名</td>
+						<td>学院</td>
+						<td>身份</td>
+						<td>课程</td>
+					</tr>
+					<tr>
+						<td>张三</td>
+						<td>医学院</td>
+						<td>教授</td>
+						<td>生理学</td>
+					</tr>
+					<tr>
+						<td>张三</td>
+						<td>医学院</td>
+						<td>教授</td>
+						<td>生理学</td>
+					</tr>
+					<tr>
+						<td>张三</td>
+						<td>医学院</td>
+						<td>教授</td>
+						<td>生理学</td>
+					</tr>
+					<tr>
+						<td>张三</td>
+						<td>医学院</td>
+						<td>教授</td>
+						<td>生理学</td>
+					</tr>
+					<tr>
+						<td>张三</td>
+						<td>医学院</td>
+						<td>教授</td>
+						<td>生理学</td>
+					</tr>
+					<tr>
+						<td>张三</td>
+						<td>医学院</td>
+						<td>教授</td>
+						<td>生理学</td>
+					</tr>
 
-			<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-			<script type="text/javascript" src="js/jquery.min.js"></script>
-			<!-- Include all compiled plugins (below), or include individual files as needed -->
-			<script type="text/javascript" src="js/bootstrap.min.js"></script>
-			<script type="text/javascript" src="js/common.js"></script>
-			<script>
-				$('#add-jg').click(function() {
-					location.href = "res.html"
-				});
-			</script>
+				</table>
+			</div>
+		</div>
+
+		</div>
+
+		<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+		<script type="text/javascript" src="js/jquery.min.js"></script>
+		<!-- Include all compiled plugins (below), or include individual files as needed -->
+		<script type="text/javascript" src="js/bootstrap.min.js"></script>
+		<script type="text/javascript" src="js/common.js"></script>
+		<script>
+			$('#add-jg').click(function() {
+				location.href = "res.html"
+			});
+		</script>
 	</body>
 
 </html>
